--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,6 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
     - name: Download ngrok
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
 
@@ -30,17 +27,5 @@ jobs:
     - name: Set Local User Password
       run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
 
-    - name: Start ngrok Tunnel for RDP in the background
-      run: |
-        Start-Job -ScriptBlock {
-          .\ngrok\ngrok.exe tcp 3389
-        }
-        Start-Sleep -Seconds 10
-
-    - name: Commit and push changes
-      run: |
-        git config --global user.email "actions@github.com"
-        git config --global user.name "GitHub Actions"
-        git add .
-        git commit -m "Add files from Windows environment"
-        git push
+    - name: Create ngrok Tunnel for RDP
+      run: .\ngrok\ngrok.exe tcp 3389
